[tool.poetry]
name = "padrepads"
version = "0.1.2"
description = "PaDRe-PaDS aims to to add additional machine learning concepts into the world of pypads."
authors = ["Thomas Weißgerber <thomas.weissgerber@uni-passau.de>", "Ben Amor Mehdi <Mehdi.BenAmor@uni-passau.de>", "Christofer Fellicious <Christofer.Fellicious@uni-passau.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://www.padre-lab.eu/"
repository = "https://github.com/padre-lab-eu/padre-pads"
documentation = "https://readthedocs.org/projects/pypads/"
keywords = ["tracking", "machine learning", "deep learning", "neural networks", "reproducibility"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "Intended Audience :: Data Scientist", "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)", "Natural Language :: English", "Operating System :: MacOS", "Operating System :: Microsoft :: Windows", "Operating System :: Unix", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Topic :: Scientific/Engineering :: Artificial Intelligence"]

[tool.poetry.dependencies]
python = "^3.7.0"
pypads = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2.5"
nose = "^1.3.7"
pytest-faulthandler = "^2.0.1"
scikit-learn = "^0.21.3"
keras = "^2.3.1"
tensorflow = "^2.0.0b1"
psutil = "^5.7.0"
networkx = "^2.4"
torch = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
